--- a/test/e2e/mock-ep-app/style.scss
+++ b/test/e2e/mock-ep-app/style.scss
@@ -6,6 +6,7 @@ $name2: sprite-names($leftright);
 
 .bg4 {
   font-size: 12px;
+  transition: all 1s ease;
 
   @each $name in $names {
     .#{$name} {
