--- a/docs/entries/config.scss
+++ b/docs/entries/config.scss
@@ -47,3 +47,9 @@ div.vux-popup-dialog {
 .nav-item-dropdown {
   cursor: pointer;
 }
+
+.vux-my-picker {
+  margin-bottom: 30px;
+  border: 1px solid #d0d0d0;
+  border-radius: 5px;
+}
