--- a/docs/entries/config.scss
+++ b/docs/entries/config.scss
@@ -4,16 +4,18 @@
   margin: 35px 0 !important;
 }
 
-//div.page,
-//header.header.is-fixed {
-//  left: 440px;
-//}
-//
-//figure.sidebar,
-//div.sidebar-toggle {
-//  left: 220px;
-//  width: 220px;
-//}
+#app {
+  .page,
+  .header.is-fixed {
+    left: 440px;
+  }
+
+  .sidebar,
+  .sidebar-toggle {
+    left: 220px;
+    width: 220px;
+  }
+}
 
 .easepack-title {
   @include center-block();
