--- a/docs/entries/config.scss
+++ b/docs/entries/config.scss
@@ -4,18 +4,18 @@
   margin: 35px 0 !important;
 }
 
-#app {
-  .page,
-  .header.is-fixed {
-    left: 440px;
-  }
-
-  .sidebar,
-  .sidebar-toggle {
-    left: 220px;
-    width: 220px;
-  }
-}
+//#app {
+//  .page,
+//  .header.is-fixed {
+//    left: 440px;
+//  }
+//
+//  .sidebar,
+//  .sidebar-toggle {
+//    left: 220px;
+//    width: 220px;
+//  }
+//}
 
 .easepack-title {
   @include center-block();
