--- a/docs/entries/config.scss
+++ b/docs/entries/config.scss
@@ -70,3 +70,10 @@ div.vux-popup-dialog {
   border: 1px solid #d0d0d0;
   border-radius: 5px;
 }
+
+.lottery-round {
+  .weui-dialog {
+    width: auto;
+    max-width: none;
+  }
+}
