--- a/docs/entries/config.scss
+++ b/docs/entries/config.scss
@@ -4,18 +4,28 @@
   margin: 35px 0 !important;
 }
 
-//#app {
+// #app {
 //  .page,
 //  .header.is-fixed {
 //    left: 440px;
 //  }
-//
+
 //  .sidebar,
 //  .sidebar-toggle {
 //    left: 220px;
 //    width: 220px;
 //  }
-//}
+// }
+
+// #sidebar {
+//   display: block;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   bottom: 0;
+//   width: 200px;
+//   background-color: #171717;
+// }
 
 .easepack-title {
   @include center-block();
@@ -65,11 +75,11 @@ div.vux-popup-dialog {
   cursor: pointer;
 }
 
-.vux-my-picker {
-  margin-bottom: 30px;
-  border: 1px solid #d0d0d0;
-  border-radius: 5px;
-}
+// .vux-my-picker {
+//   margin-bottom: 30px;
+//   border: 1px solid #d0d0d0;
+//   border-radius: 5px;
+// }
 
 .lottery-round {
   .weui-dialog {
