new feature __sprite_map__

--- a/test/e2e/mock-ep-app-rc/style.scss
+++ b/test/e2e/mock-ep-app-rc/style.scss
@@ -3,6 +3,7 @@ $names: sprite-names($sprite);
 
 .inline {
   border-radius: 1px;
+  background: url(./images/loading1.png) 0 0 no-repeat;
 }
 
 .bs {
