--- a/test/e2e/mock-ep-app-dev/styles.scss
+++ b/test/e2e/mock-ep-app-dev/styles.scss
@@ -1,4 +1,4 @@
-$icons: sprite-map("icons/*.png");
+// $icons: sprite-map("icons/*.png");
 
 body {
   background: #f1f1f1;
@@ -11,123 +11,6 @@ body {
   .weui-dialog {
     max-height: 90%;
     overflow: auto;
+    transition: left .2s ease;
   }
-}
-
-.m-help {
-  display: block;
-  width: 100%;
-  margin: 10px 0 60px;
-  border: 1px solid #dedede;
-  border-right: none;
-  border-left: none;
-  background: #fff;
-
-  &.empty {
-    border: none;
-
-    &:before, &:after {
-      display: block;
-      content: "没有数据";
-      position: absolute;
-      top: 40%;
-      left: 0;
-      width: 100%;
-      color: #333;
-      font-size: 14px;
-      text-align: center;
-    }
-  }
-
-  > li {
-    display: block;
-    position: relative;
-    margin: 0 9px;
-    border-top: 1px solid #dedede;
-
-    &:before {
-      display: block;
-      content: "";
-      position: absolute;
-      right: 4px;
-      top: 50%;
-      width: #{sprite-width($icons, more)/2}px;
-      height: #{sprite-height($icons, more)/2}px;
-      background: sprite-url($icons)
-        -#{sprite-position-x($icons, more)/2}px
-        -#{sprite-position-y($icons, more)/2}px no-repeat;
-      background-size: #{sprite-width($icons)/2}px #{sprite-height($icons)/2}px;
-      transform: translate(0, -50%);
-    }
-
-    &:first-child {
-      border: none;
-    }
-
-    > a {
-      display: block;
-      padding-right: 20px;
-      color: #333;
-      font-size: 14px;
-      line-height: 50px;
-      text-indent: 2px;
-      @include text-ellipsis();
-    }
-  }
-
-  .more {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    margin: 0;
-    padding: 0 10px;
-    @include clearfix();
-    box-sizing: border-box;
-    background: #fff;
-
-    &:before {
-      content: none;
-    }
-
-    > a {
-      font-size: 13px;
-      -webkit-tap-highlight-color: transparent;
-    }
-
-    .fl {
-      float: left;
-      color: #a5a5a5;
-    }
-    .fr {
-      display: block;
-      float: right;
-      position: relative;
-      padding-left: 18px;
-      padding-right: 0;
-
-      &:before {
-        display: block;
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 50%;
-        width: #{sprite-width($icons, service)/2}px;
-        height: #{sprite-height($icons, service)/2}px;
-        background: sprite-url($icons)
-          -#{sprite-position-x($icons, service)/2}px
-          -#{sprite-position-y($icons, service)/2}px no-repeat;
-        background-size: #{sprite-width($icons)/2}px #{sprite-height($icons)/2}px;
-        transform: translate(0, -50%);
-      }
-    }
-  }
-}
-
-.m-title {
-  color: #929493;
-  line-height: 38px;
-  border-top: 1px solid #eee;
-  background: #f4f6f5;
-  @include text-ellipsis();
 }
