--- a/test/e2e/mock-ep-app-rc/style.scss
+++ b/test/e2e/mock-ep-app-rc/style.scss
@@ -4,6 +4,7 @@ $names: sprite-names($sprite);
 .inline {
   border-radius: 1px;
   background: url(./images/loading1.png) 0 0 no-repeat;
+  background-image: linear-gradient(to right, #0a1176, #281059);
 }
 
 .bs {
